# norman_core_sdk_python

./: .gitignore  .pylintrc  README.md  play.py  pyproject.toml  requirements.txt
norman_core/: __init__.py  _app_config.py
norman_core/clients/: http_client.py  socket_client.py
norman_core/clients/objects/errors/: norman_http_error.py
norman_core/services/authenticate/: __init__.py  accounts.py  login.py  register.py  signup.py
norman_core/services/file_pull/: file_pull.py
norman_core/services/file_push/: file_push.py
norman_core/services/invoke/: invoke.py
norman_core/services/persist/: __init__.py  accounts.py  invocation_flags.py  invocations.py  model_bases.py  model_flags.py  models.py  notifications.py  status_flags.py
norman_core/services/retrieve/: retrieve.py
norman_core/utils/api_client/: __init__.py  api_client.py  http_client.py  socket_client.py
norman_core/utils/api_client/objects/: request_encoding.py  request_kwargs.py  response_encoding.py
tests/: test_accounts.py  test_config.py  test_get_models.py  test_invoke.py  test_objects.py  test_upload_models.py  test_utils.py
