[project]
name = "norman-core-sdk"
version = "0.1.0"
description = "Norman SDK"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx==0.28.1",
    "pydantic==2.11.7",
    "xxhash==3.5.0",
    "aiofiles==24.1.0",
    "pycryptodome==3.23.0",
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "norman_utils_external @ git+ssh://git@ssh.github.com:443/norman-ml/norman_utils_external.git@86c59rfwq/tooling/split-utils",
    "norman_objects @ git+ssh://git@ssh.github.com:443/norman-ml/norman_objects.git@86c59h7t5/libraries/io-objects"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "upgrade: marks tests as part of model upgrade flow (deselect with '-m \"not upgrade\"')",
]
