[project]
name = "norman-core-sdk"
version = "0.1.0"
description = "Norman SDK"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "norman_objects @ git+https://github.com/norman-ml/norman_objects.git@86c4p1j6d/feature/model-defaults",
    "norman_utils_external @ git+https://github.com/norman-ml/norman_utils_external.git",

    "aiofiles==24.1.0",
    "httpx==0.28.1",
    "pydantic==2.11.7",
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "xxhash==3.5.0"
]

[build-system]
requires = ["setuptools==80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "upgrade: marks tests as part of model upgrade flow (deselect with '-m \"not upgrade\"')",
]
